Masha_Language/src/MASHA_Language_Tree/masha.java
/* Generated By:JJTree&JavaCC: Do not edit this line. masha.java */
package MASHA_Language_Tree;

public class masha/*@bgen(jjtree)*/implements mashaTreeConstants, mashaConstants {/*@bgen(jjtree)*/
  protected static JJTmashaState jjtree = new JJTmashaState();public static void main(String args [])
  {
    System.out.println("   Welcome to Masha language");
    System.out.print("-------------------------------\u005cn");
    masha parser = new masha(System.in);
    while (true)
    {
      System.out.print("\u005cnPlease enter an expression:");
      try
      {
        SimpleNode n = masha.Start();
        n.dump("Masha Tree >>");
        System.out.println("Good Job! Your statment is Correct :) .\u005cn\u005cn");
      }
      catch (Exception e)
      {
        System.out.println();
        System.out.println("Oops.Wrong statement, Try again :( \u005cn\u005cn");
        System.out.println(e.getMessage());
        masha.ReInit(System.in);
      }
      catch (Error e)
      {
        System.out.println("Oops. Not accepted statement, Try again :( .\u005cn\u005cn");
        break;
      }
    }
  }

  static final public SimpleNode Start() throws ParseException {
 /*@bgen(jjtree) Start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      statement();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void statement() throws ParseException {
 /*@bgen(jjtree) statement */
  SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATIC_ID:
      case VARIABLE_ID:
      case CONSTANT_ID:
      case INT:
      case FLOAT:
      case IF:
      case FUN:
      case UNTIL:
      case VAR:
      case NOT:
      case LEFT_PAR:
        if (jj_2_1(2)) {
          decleration();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case NOT:
          case LEFT_PAR:
            logical_stmt();
            break;
          case IF:
            conditional_stmt();
            break;
          case STATIC_ID:
          case VARIABLE_ID:
          case CONSTANT_ID:
          case INT:
          case FLOAT:
            comparison_stmet();
            break;
          case FUN:
          case UNTIL:
            loop();
            break;
          default:
            jj_la1[0] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        break;
      case LIST:
        list();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void decleration() throws ParseException {
 /*@bgen(jjtree) decleration */
  SimpleNode jjtn000 = new SimpleNode(JJTDECLERATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_2(2)) {
        declere_VAR();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STATIC_ID:
        case VARIABLE_ID:
        case CONSTANT_ID:
        case INT:
        case FLOAT:
          arithmetic_stmt();
          break;
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      FULL_STOP();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

// used to write an arithmetic expression.
  static final public void arithmetic_stmt() throws ParseException {
 /*@bgen(jjtree) arithmetic_stmt */
  SimpleNode jjtn000 = new SimpleNode(JJTARITHMETIC_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STATIC_ID:
        case VARIABLE_ID:
        case CONSTANT_ID:
          ID();
          break;
        case INT:
        case FLOAT:
          number();
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        artimatic_operation();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STATIC_ID:
        case VARIABLE_ID:
        case CONSTANT_ID:
          ID();
          break;
        case INT:
        case FLOAT:
          number();
          break;
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STATIC_ID:
        case VARIABLE_ID:
        case CONSTANT_ID:
        case INT:
        case FLOAT:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_1;
        }
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    System.out.println("You used an artimatic statment!");
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

// this method used to declare a variable
  static final public void declere_VAR() throws ParseException {
 /*@bgen(jjtree) declere_VAR */
  SimpleNode jjtn000 = new SimpleNode(JJTDECLERE_VAR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      VAR();
      ID();
      ASSIGNMENT();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATIC_ID:
      case VARIABLE_ID:
      case CONSTANT_ID:
        ID();
        break;
      case INT:
      case FLOAT:
        number();
        break;
      case STRING:
        STRING();
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

// work
  static final public void logical_stmt() throws ParseException {
 /*@bgen(jjtree) logical_stmt */
  SimpleNode jjtn000 = new SimpleNode(JJTLOGICAL_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEFT_PAR:
        Binary_logical_stmt();
        break;
      case NOT:
        unary_logical_stmt();
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    System.out.println("You used a logical statment!");
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void unary_logical_stmt() throws ParseException {
 /*@bgen(jjtree) unary_logical_stmt */
  SimpleNode jjtn000 = new SimpleNode(JJTUNARY_LOGICAL_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      NOT();
      LEFT_PAR();
      comparison_stmet();
      RIGHT_PAR();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Binary_logical_stmt() throws ParseException {
 /*@bgen(jjtree) Binary_logical_stmt */
  SimpleNode jjtn000 = new SimpleNode(JJTBINARY_LOGICAL_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      LEFT_PAR();
      comparison_stmet();
      RIGHT_PAR();
      logical_operation();
      LEFT_PAR();
      comparison_stmet();
      RIGHT_PAR();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void conditional_stmt() throws ParseException {
 /*@bgen(jjtree) conditional_stmt */
  SimpleNode jjtn000 = new SimpleNode(JJTCONDITIONAL_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      IF();
      LEFT_PAR();
      comparison_stmet();
      RIGHT_PAR();
      COLON();
      LEFT_SQR_BRACKT();
      label_2:
      while (true) {
        statement();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STATIC_ID:
        case VARIABLE_ID:
        case CONSTANT_ID:
        case INT:
        case FLOAT:
        case IF:
        case FUN:
        case UNTIL:
        case VAR:
        case LIST:
        case NOT:
        case LEFT_PAR:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_2;
        }
      }
      RIGHT_SQR_BRACKT();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSE:
        else_stmt();
        break;
      case FULL_STOP:
        FULL_STOP();
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    System.out.println("You used a conditional statment!");
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void else_stmt() throws ParseException {
 /*@bgen(jjtree) else_stmt */
  SimpleNode jjtn000 = new SimpleNode(JJTELSE_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      ELSE();
      LEFT_SQR_BRACKT();
      label_3:
      while (true) {
        statement();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STATIC_ID:
        case VARIABLE_ID:
        case CONSTANT_ID:
        case INT:
        case FLOAT:
        case IF:
        case FUN:
        case UNTIL:
        case VAR:
        case LIST:
        case NOT:
        case LEFT_PAR:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_3;
        }
      }
      RIGHT_SQR_BRACKT();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

// work
  static final public void comparison_stmet() throws ParseException {
 /*@bgen(jjtree) comparison_stmet */
  SimpleNode jjtn000 = new SimpleNode(JJTCOMPARISON_STMET);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATIC_ID:
      case VARIABLE_ID:
      case CONSTANT_ID:
        ID();
        break;
      case INT:
      case FLOAT:
        number();
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      comparison_operation();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATIC_ID:
      case VARIABLE_ID:
      case CONSTANT_ID:
        ID();
        break;
      case INT:
      case FLOAT:
        number();
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    System.out.println("You used a comparison statment!");
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

// used to create a loop
  static final public void loop() throws ParseException {
 /*@bgen(jjtree) loop */
  SimpleNode jjtn000 = new SimpleNode(JJTLOOP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UNTIL:
        until();
        break;
      case FUN:
        fun();
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    System.out.println("You used an Iterative statement!");
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void until() throws ParseException {
 /*@bgen(jjtree) until */
  SimpleNode jjtn000 = new SimpleNode(JJTUNTIL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      UNTIL();
      LEFT_PAR();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATIC_ID:
      case VARIABLE_ID:
      case CONSTANT_ID:
      case INT:
      case FLOAT:
        comparison_stmet();
        break;
      case NOT:
      case LEFT_PAR:
        logical_stmt();
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      RIGHT_PAR();
      COLON();
      LEFT_SQR_BRACKT();
      label_4:
      while (true) {
        statement();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STATIC_ID:
        case VARIABLE_ID:
        case CONSTANT_ID:
        case INT:
        case FLOAT:
        case IF:
        case FUN:
        case UNTIL:
        case VAR:
        case LIST:
        case NOT:
        case LEFT_PAR:
          ;
          break;
        default:
          jj_la1[15] = jj_gen;
          break label_4;
        }
      }
      RIGHT_SQR_BRACKT();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
